1.3.0 - TBD
    * Full test coverage.
		* Fixed LookaheadReader.skip(int) and LookaheadReader.read(char[],int,int)
      not working according to the specification.
    * API changes:
        * Removed LookaheadReader.consume(int) - use skip(int) instead.
				* Removed JsonArray.addElement().
				* Removed JsonArray.setElement().
				* Removed JsonArray.getElements().
				* Removed JsonArray.getElementList().
				* Renamed JsonArray.getNumElement() to size();
				* Renamed JsonObject.addMember() to add().
				* Removed JsonObject.hasMember(String).
				* Removed JsonObject.getMembers().
				* Removed JsonObject.getMemberList().
				* Renamed JsonObject.getNumMember() to size().
				* Added Json.of(X) methods to convert primitive types and String to the
          wrapped JSON equivalents.
        * Added asInt(int), asLong(long), asFloat(float), asDouble(double),
					asString(String), and asBoolean(boolean) to JsonValue.
				* Added JsonValue.asArray() and JsonValue.asObject() as aliases of
          JsonValue.array() and JsonValue.object().
				* JsonObject.add(String, JsonValue) now throws a NullPointerException when
					the value is null.
				* JsonArray.add(JsonValue) now throws a NullPointerException when
					the value is null.

1.2.0 - 2017-04-29
    * Removed JastAdd code generation, converted everything to static Java.
    * Multiple API changes.
    * Removed JsonTrue - replaced by Json.TRUE.
    * Removed JsonFalse - replaced by Json.FALSE.
    * Removed JsonUnknown - replaced by Json.UNKNOWN.
    * Removed JsonNull - replaced by Json.NULL.
    * Added more API tests.

1.1.0 - 2017-04-28
    * Added JsonValue.toCompactString(), to build compact JSON output.

1.0.1 - 2014-01-31

    * Improved JsonObject API
    * Serializing and parsing floats now works
    * JsonObject.add now escapes the member name